add logo responsivo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="container">
-            <h2 class="logo">NETFLIX</h2>
+            <img class="logo" src="img/netflix.jpg">
             <nav>
                 <a href="#">Inicio</a>
                 <a href="#">Sérios</a>
